--- a/SafeFood_Web_Spring_GJ_BYG_LSH/src/main/webapp/WEB-INF/static/css/mainCSS.css
+++ b/SafeFood_Web_Spring_GJ_BYG_LSH/src/main/webapp/WEB-INF/static/css/mainCSS.css
@@ -320,3 +320,53 @@
 	opacity: 1;
 	font-family: 'Do Hyeon', sans-serif;
 }
+
+<!-- hover -->
+
+.container {
+	position: relative;
+	width: 50%;
+}
+
+.image {
+	display: block;
+}
+
+.prdtimg {
+	width: -webkit-fill-available;
+	height: auto;
+	padding-top: 50px;
+}
+
+.overlay {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 30%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease;
+	background-color: #a9d7e4;
+	margin-top: 179px;
+}
+
+.container:hover .overlay {
+	opacity: 0.5;
+}
+
+.text {
+	color: black;
+	font-size: 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	/* -webkit-transform: translate(-50%, -50%); */
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	text-align: center;
+	width: -webkit-fill-available;
+	opacity: 1;
+	font-family: 'Do Hyeon', sans-serif;
+}
