--- a/SafeFood_Web_Spring_GJ_BYG_LSH/src/main/webapp/WEB-INF/static/css/mainCSS.css
+++ b/SafeFood_Web_Spring_GJ_BYG_LSH/src/main/webapp/WEB-INF/static/css/mainCSS.css
@@ -7,12 +7,20 @@
 }
 
 .btn-primary {
+	margin-top: 20px;
 	margin-right: 10px;
 	color: #fff;
 	background-color: #337ab7;
 	border-color: #2e6da4;
 }
-
+.foodbox{
+	border-bottom: 1px solid #eeeeee;
+}
+.mark{
+	margin-top: 10px;
+	width: 60px;
+	height: 60px;
+}
 .jumbotron2 {
 	background-image:
 		url(https://ak1.ostkcdn.com/img/mxc/122017_Plates_Plates_HERO.jpg?imwidth=1024&impolicy=medium);
@@ -315,6 +323,9 @@
 	font-family: 'Do Hyeon', sans-serif;
 }
 
+.content{
+	height: 280px;
+}
 .container {
 	position: relative;
 	width: 50%;
